--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -35,5 +35,8 @@ jobs:
       - name: Verify formatting
         run: deno fmt --check
 
+      - name: Run test
+        run: deno test -A main.ts
+        
       - name: Run project
         run: deno run -A main.ts
